# mpvqml

./: .clang-format  .gitignore  API.md  Architecture.md  CHANGELOG.md  CMakeLists.txt  FeatureMapping.md  FutureDevelopment.md  README.md  mpvcontroller_adapter.cpp  mpvcontroller_adapter.h  mpvcontroller_iface.h  mpvhookmanager.cpp  mpvhookmanager.h  mpvlogclient.cpp  mpvlogclient.h  mpvplayer.cpp  mpvplayer.h
examples/: AdvancedPlayer.qml  AmbientScreensaver.qml  AudioPlayer.qml  MediaInspector.qml  README.md
scripts/: build  build-test  generate-assets  install  run-tests
tests/: TestPlan.qml  mock_mpvcontroller.cpp  mock_mpvcontroller.h  test_mpvplayer.cpp
tests/assets/: test_subs1.srt  test_subs2.srt
